# PLCT_zyxhmn

./: .gitignore  README.md
202503/moveit_test/old/: README.md
202504/moveit_ubuntu22/: README.md
202504/moveit_ubuntu22/docs/robotic_arm/: README.md
202504/moveit_ubuntu22/docs/tutorials/: getting_started.md  visualizing_in_rviz.md  your_first_cpp_moveit_project.md
202504/moveit_ubuntu22/src/xarm_vision_grasp/: CMakeLists.txt
202504/moveit_ubuntu22/src/xarm_vision_grasp/config/: moveit_params.yaml
202504/moveit_ubuntu22/src/xarm_vision_grasp/src/: arm_control_node.cpp  control_node.cpp  gripper_test_node.cpp  red_block_detector.cpp
202504/ros_basic_programming_test/src/tf_example/: setup.py
202505/: README.md
202506/: README.md
202507/: README.md
202507/bac/doc/: build.md
202507/bac/moveit_test/: README.md
202507/bac/moveit_test/docs/tutorials/: getting_started.md  moveit_quickstart_in_rviz.md
202507/bac/moveit_test/old/: README.md
202508/: CMakeLists.txt  README.md  compare.py  diff_capabilities.html2D  diff_default_capabilities.html2D  moveit-ros-move-group.spec
202508/err_Packages/: elf.txt  elf_default.txt  libmoveit_move_group_capabilities_base.so.2.5.9  libmoveit_move_group_default_capabilities.so.2.5.9  nm.txt  nm_default.txt  ros-humble-moveit-ros-move-group-2.5.9-1.oe2403.src.rpm  ros-humble-moveit-ros-move-group-2.5.9-1.oe2403.x86_64.rpm  ros-humble-moveit-ros-move-group-debugsource-2.5.9-1.oe2403.x86_64.rpm
202509/: README.md
202509/OBS/: OBS.md
moveit/: README.md  build.md  moveit2.md
moveit/bac/log/moveit_group/: log.md
moveit/bac/moveit_test/docs/tutorials/: error.md  moveit_quickstart_in_rviz.md  your_first_c++_moveit_project.md
moveit/bac/moveit_test/old/: README.md
moveit/bac/moveit_test/old/error/: error2.md
moveit/moveit_test/docs/tutorials/: getting_started.md
moveit/moveit_test/old/error/: error1.md
moveit_test/: README.md
moveit_test/error/: error1.md  fix_error1.md
moveit_ubuntu22/: README.md
moveit_ubuntu22/docs/tutorials/: moveit_quickstart_in_rviz.md  pick_and_place.md  planning_around_objects.md
moveit_ubuntu22/src/hello_moveit/: CMakeLists.txt  package.xml
moveit_ubuntu22/src/hello_moveit/back_src/: snapshot_planning_around_objects.cpp  snapshot_visualizing_in_rviz.cpp
moveit_ubuntu22/src/xarm_ros2/xarm_gazebo/worlds/: table.world
moveit_ubuntu22/src/xarm_vision_grasp/: CMakeLists.txt  package.xml
moveit_ubuntu22/src/xarm_vision_grasp/launch/: gripper_test_launch.py  xarm_vision_grasp.launch.py
moveit_ubuntu22/src/xarm_vision_grasp/src/: arm_control_node.cpp  control_node.cpp  tf_test_node.cpp  vision_node.cpp
moveit_ubuntu22/src/xarm_vision_grasp/srv/: Grasp.srv
ros2_multiarch_tests/: README.md
ros2_multiarch_tests/docs/: risc_qemu.md  x86_virtualbox.md
ros_basic_programming_test/: README.md
ros_basic_programming_test/src/tf_example/: package.xml  setup.cfg
ros_basic_programming_test/src/tf_example/tf_example/: listen_tf.py  publish_tf.py
