<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_vision_grasp</name>
  <version>0.0.1</version>
  <description>Vision-based grasp for xArm using ROS2 and OpenCV</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_export_depend>rclcpp</build_export_depend>
  <exec_depend>rclcpp</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>cv_bridge</exec_depend>

  <build_depend>image_transport</build_depend>
  <build_export_depend>image_transport</build_export_depend>
  <exec_depend>image_transport</exec_depend>

  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>

  <build_depend>xarm_msgs</build_depend>
  <build_export_depend>xarm_msgs</build_export_depend>
  <exec_depend>xarm_msgs</exec_depend>

  <build_depend>xarm_api</build_depend>
  <build_export_depend>xarm_api</build_export_depend>
  <exec_depend>xarm_api</exec_depend>

  <build_depend>image_geometry</build_depend>
  <build_export_depend>image_geometry</build_export_depend>
  <exec_depend>image_geometry</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>